--- a/2DGame/2DGame.cbp
+++ b/2DGame/2DGame.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -22,6 +23,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -31,16 +33,13 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="main.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="main.h" />
-		<Unit filename="models.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="opengl.c">
-			<Option compilerVar="CC" />
-		</Unit>
+		<Unit filename="include/Bounds.h" />
+		<Unit filename="include/Player.h" />
+		<Unit filename="include/main.h" />
+		<Unit filename="src/Bounds.cpp" />
+		<Unit filename="src/Player.cpp" />
+		<Unit filename="src/main.cpp" />
+		<Unit filename="src/opengl.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
